@@ -35,8 +35,8 @@ import java.util.*;
  * List command implementation<br>
  * Displays listing of graveyards
  */
-final class ListSubcommand extends AbstractSubcommand implements Subcommand {
-
+final class ListSubcommand extends AbstractSubcommand implements Subcommand
+{
 	private final PluginMain plugin;
 
 
@@ -44,7 +44,8 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 	 * Class constructor
 	 * @param plugin reference to plugin main class instance
 	 */
-	ListSubcommand(final PluginMain plugin) {
+	ListSubcommand(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.name = "list";
 		this.usageString = "/graveyard list [page]";
@@ -55,17 +56,19 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to list graveyards, output error message and return true
-		if (!sender.hasPermission(permissionNode)) {
+		if (!sender.hasPermission(permissionNode))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_LIST).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// check maximum arguments
-		if (args.size() > maxArgs) {
+		if (args.size() > maxArgs)
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
 			displayUsage(sender);
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
@@ -76,11 +79,14 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 		int page = 1;
 
 		// if argument exists, try to parse as integer page number
-		if (args.size() == 1) {
-			try {
-				page = Integer.parseInt(args.get(0));
+		if (args.size() == 1)
+		{
+			try
+			{
+				page = Integer.parseInt(args.getFirst());
 			}
-			catch (NumberFormatException e) {
+			catch (NumberFormatException e)
+			{
 				// second argument not a page number, let default of 1 stand
 			}
 		}
@@ -91,32 +97,38 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 		// get all records from datastore
 		final Collection<Graveyard> allRecords = plugin.dataStore.selectAllGraveyards();
 
-		if (Config.DEBUG.getBoolean(plugin.getConfig())) {
+		if (Config.DEBUG.getBoolean(plugin.getConfig()))
+		{
 			plugin.getLogger().info("Records fetched from datastore: " + allRecords.size());
 		}
 
 		// get undiscovered searchKeys for player
 		Collection<String> undiscoveredKeys = new HashSet<>();
-		if (sender instanceof Player) {
+		if (sender instanceof Player)
+		{
 			undiscoveredKeys.addAll(plugin.dataStore.selectUndiscoveredKeys((Player) sender));
 		}
 
 		// create empty list of records
 		List<Graveyard> displayRecords = new ArrayList<>();
 
-		for (Graveyard graveyard : allRecords) {
-
+		for (Graveyard graveyard : allRecords)
+		{
 			// if graveyard has invalid location and sender has list disabled permission, add to display list
-			if (graveyard.getLocation().isEmpty()) {
-				if (sender.hasPermission("graveyard.list.disabled")) {
+			if (graveyard.getLocation().isEmpty())
+			{
+				if (sender.hasPermission("graveyard.list.disabled"))
+				{
 					displayRecords.add(graveyard);
 				}
 				continue;
 			}
 
 			// if graveyard is not enabled and sender does not have override permission, do not add to display list
-			if (!graveyard.isEnabled() && !sender.hasPermission("graveyard.list.disabled")) {
-				if (Config.DEBUG.getBoolean(plugin.getConfig())) {
+			if (!graveyard.isEnabled() && !sender.hasPermission("graveyard.list.disabled"))
+			{
+				if (Config.DEBUG.getBoolean(plugin.getConfig()))
+				{
 					plugin.getLogger().info(graveyard.getDisplayName()
 							+ " is disabled and player does not have graveyard.list.disabled permission.");
 				}
@@ -126,8 +138,10 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 			// if graveyard is undiscovered and sender does not have override permission, do not add to display list
 			if (graveyard.isHidden()
 					&& undiscoveredKeys.contains(graveyard.getSearchKey())
-					&& !sender.hasPermission("graveyard.list.hidden")) {
-				if (Config.DEBUG.getBoolean(plugin.getConfig())) {
+					&& !sender.hasPermission("graveyard.list.hidden"))
+			{
+				if (Config.DEBUG.getBoolean(plugin.getConfig()))
+				{
 					plugin.getLogger().info(graveyard.getDisplayName()
 							+ " is undiscovered and player does not have graveyard.list.hidden permission.");
 				}
@@ -136,8 +150,10 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 
 			// if graveyard has group set and sender does not have group permission, do not add to display list
 			String group = graveyard.getGroup();
-			if (group != null && !group.isEmpty() && !sender.hasPermission("group." + graveyard.getGroup())) {
-				if (Config.DEBUG.getBoolean(plugin.getConfig())) {
+			if (group != null && !group.isEmpty() && !sender.hasPermission("group." + graveyard.getGroup()))
+			{
+				if (Config.DEBUG.getBoolean(plugin.getConfig()))
+				{
 					plugin.getLogger().info(graveyard.getDisplayName()
 							+ " is in group that player does not have permission.");
 				}
@@ -149,14 +165,16 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 		}
 
 		// if display list is empty, output list empty message and return
-		if (displayRecords.isEmpty()) {
+		if (displayRecords.isEmpty())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.LIST_EMPTY).send();
 			return true;
 		}
 
 		// get page count
 		int pageCount = ((displayRecords.size() - 1) / itemsPerPage) + 1;
-		if (page > pageCount) {
+		if (page > pageCount)
+		{
 			page = pageCount;
 		}
 		int startIndex = ((page - 1) * itemsPerPage);
@@ -172,13 +190,14 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 				.setMacro(Macro.PAGE_TOTAL, pageCount)
 				.send();
 
-		for (Graveyard graveyard : displayRange) {
-
+		for (Graveyard graveyard : displayRange)
+		{
 			// increment item number
 			itemNumber++;
 
 			// display invalid world list item
-			if (graveyard.getLocation().isEmpty()) {
+			if (graveyard.getLocation().isEmpty())
+			{
 				plugin.messageBuilder.compose(sender, MessageId.LIST_ITEM_INVALID_WORLD)
 						.setMacro(Macro.GRAVEYARD, graveyard)
 						.setMacro(Macro.ITEM_NUMBER, itemNumber)
@@ -191,7 +210,8 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 			Location location = graveyard.getLocation().get();
 
 			// display disabled list item
-			if (!graveyard.isEnabled()) {
+			if (!graveyard.isEnabled())
+			{
 				plugin.messageBuilder.compose(sender, MessageId.LIST_ITEM_DISABLED)
 						.setMacro(Macro.GRAVEYARD, graveyard)
 						.setMacro(Macro.ITEM_NUMBER, itemNumber)
@@ -201,7 +221,8 @@ final class ListSubcommand extends AbstractSubcommand implements Subcommand {
 			}
 
 			// display undiscovered list item
-			if (graveyard.isHidden() && undiscoveredKeys.contains(graveyard.getSearchKey())) {
+			if (graveyard.isHidden() && undiscoveredKeys.contains(graveyard.getSearchKey()))
+			{
 				plugin.messageBuilder.compose(sender, MessageId.LIST_ITEM_UNDISCOVERED)
 						.setMacro(Macro.GRAVEYARD, graveyard)
 						.setMacro(Macro.ITEM_NUMBER, itemNumber)
